# security-briefing-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  KAGGlE_WRITEUP.md  README.md  agents-cli-manifest.yaml  daily_briefing.md  deployment_metadata.json  pyproject.toml  requirements.txt
.agents/: CONTEXT.md
.agents/skills/stride-threat-model/: SKILL.md
app/: agent.py  config.py  fast_api_app.py  main.py  tools.py
app/app_utils/: telemetry.py  typing.py
deployment/terraform/single-project/: variables.tf
deployment/terraform/single-project/vars/: env.tfvars
docs/: stride_threat_model.md
submission_frontend/: Dockerfile  main.py  pyproject.toml
tests/eval/: metrics.py
