[project]
name = "submission-frontend"
version = "0.1.0"
description = "FastAPI web frontend for Daily Security Briefing Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8,<1.0.0",
    "uvicorn~=0.34.0",
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "duckduckgo-search",
    "requests",
    "python-dotenv",
    "google-genai",
    "google-cloud-aiplatform[agent-engines,evaluation]>=1.156.0",
    "protobuf>=6.31.1,<7.0.0",
    "a2a-sdk[http-server]~=0.3.22",
    "aiohttp>=3.13.4",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "gcsfs>=2024.11.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
]


